After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 764339 - ahcsrc: g_object_class_install_property: assertion 'pspec->flags & G_PARAM_WRITABLE' during initialization
ahcsrc: g_object_class_install_property: assertion 'pspec->flags & G_PARAM_WR...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.8.0
Other other
: Normal minor
: 1.8.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-03-29 22:44 UTC by Marcin Lewandowski
Modified: 2016-03-30 08:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Marcin Lewandowski 2016-03-29 22:44:35 UTC
I am using GStreamer 1.8.0 on Android.

When I initialize it using provided GStreamer.init the following messages appear in the log:

03-29 22:37:55.881  2115  2115 W VideoCapabilities: Unrecognized profile/level 0/0 for video/mpeg2
03-29 22:37:55.882  2115  2115 W VideoCapabilities: Unrecognized profile/level 0/2 for video/mpeg2
03-29 22:37:55.882  2115  2115 W VideoCapabilities: Unrecognized profile/level 0/3 for video/mpeg2
03-29 22:37:55.953  2115  2115 I VideoCapabilities: Unsupported profile 4 for video/mp4v-es
03-29 22:37:55.977  2115  2115 W VideoCapabilities: Unrecognized profile/level 0/0 for video/mpeg2
03-29 22:37:55.977  2115  2115 W VideoCapabilities: Unrecognized profile/level 0/2 for video/mpeg2
03-29 22:37:55.977  2115  2115 W VideoCapabilities: Unrecognized profile/level 0/3 for video/mpeg2
03-29 22:37:56.010  2115  2115 I VideoCapabilities: Unsupported profile 4 for video/mp4v-es
03-29 22:37:56.060  2115  2115 W GStreamer+amc: 0:00:00.627064163 0xa1c86320 gstamc.c:3491:gst_amc_codec_info_to_caps Unsupported mimetype 'audio/opus'
03-29 22:37:56.061  2115  2115 W GStreamer+amc: 0:00:00.628742392 0xa1c86320 gstamc.c:3491:gst_amc_codec_info_to_caps Unsupported mimetype 'audio/gsm'
03-29 22:37:56.083  2115  2115 W GStreamer+amc: 0:00:00.650981940 0xa1c86320 gstamc.c:3823:gst_amc_codec_info_to_caps Unsupported mimetype 'video/x-vnd.on2.vp9'
03-29 22:37:56.088  2115  2115 W GStreamer+amc: 0:00:00.655101092 0xa1c86320 gstamc.c:3506:gst_amc_codec_info_to_caps Unknown color format 0x7f000789 for codec video/3gpp
03-29 22:37:56.091  2115  2115 W GStreamer+amc: 0:00:00.658700975 0xa1c86320 gstamc.c:3506:gst_amc_codec_info_to_caps Unknown color format 0x7f000789 for codec video/avc
03-29 22:37:56.118  2115  2115 W GStreamer+amc: 0:00:00.685427449 0xa1c86320 gstamc.c:3506:gst_amc_codec_info_to_caps Unknown color format 0x7f000789 for codec video/mp4v-es
03-29 22:37:56.121  2115  2115 W GStreamer+amc: 0:00:00.688268534 0xa1c86320 gstamc.c:3506:gst_amc_codec_info_to_caps Unknown color format 0x7f000789 for codec video/x-vnd.on2.vp8
03-29 22:37:56.145  2115  2115 E GLib+GLib-GObject: g_object_class_install_property: assertion 'pspec->flags & G_PARAM_WRITABLE' failed

I am not sure if this is related to plugins, but if it is, my list is:

GSTREAMER_PLUGINS := coreelements audioconvert audiorate audioresample typefindfunctions autodetect playback ogg opus audioparsers opusparse androidmedia tcp rtsp rtp soup udp sdp opensles encoding debug autoconvert

I have not encountered any issues because of this warning, but I am not using video elements.
Comment 1 Sebastian Dröge (slomo) 2016-03-30 07:38:13 UTC
commit 44770d22aa9ae8ae6986574132af71bf7a4c558f
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Mar 30 10:34:07 2016 +0300

    ahcsrc: There's no point in read-only CONSTRUCT properties
    
    And creating one is causing assertions. Also get rid of the other CONSTRUCT
    property as it's a) unneeded for default initialization and b) you're not
    supposed to use constructor properties when creating element instances and the
    GStreamer API doesn't provide direct ways for doing so.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=764339